Diseño: Vistas proyectos

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/CrearProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/CrearProyecto.cshtml
@@ -24,13 +24,16 @@
     <hr />
 
     <h3>Fases</h3>
-    <div class="form-container">
-    <div id="fases-container">
-        <!-- Aquí se añadirán los contenedores de fase en formato de "card" -->
-    </div>
+    <!-- Contenedor con desplazamiento para las fases -->
 
+    <div class="crear-proyecto-container">
+        <div class="fases-scroll-container">
+            <div id="fases-container">
+                <!-- Aquí se añadirán los contenedores de fase en formato de "card" -->
+            </div>
+        </div>
+    </div>
 
     <button type="button" class="btn btn-primary mt-3" onclick="addPhase()">Agregar Fase</button>
     <button type="submit" class="btn btn-success mt-3">Crear Proyecto</button>
-    </div>
 </form>
