--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -33,4 +33,7 @@
     </div>
 </div>
 
+<!-- Agregar RenderSection para scripts opcionales -->
+@RenderSection("Scripts", required: false)
+
 <script src="~/js/funciones.js"></script>
